Fix checkboxes being too big at low ui size

--- a/app/index.css
+++ b/app/index.css
@@ -2299,6 +2299,10 @@ input[type="color"] {
   width: 1.8rem;
 }
 
+input[type="checkbox"] {
+  height: 0.8125rem;
+}
+
 ::-webkit-color-swatch-wrapper {
   padding: 0;
 }
